--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,7 +10,7 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item active">
-                <a class="nav-link" href="Main">Main <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="Main">Adding company <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item">
