--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -36,6 +36,14 @@
 
 <td> <img class="center-pic" th:src="@{/img/{filename}(filename = logo.jpg)}"></td>
 
+
+
+    <div class="d-flex align-items-end flex-column bd-highlight mb-3" style="height: 238px;">
+        <div class="mt-auto p-2 bd-highlight">
+            <a href="https://www.linkedin.com/in/arseniy-polyak-aa3b7b1b5/"><font size="2" color="#778899" face="Arial">Web Developer - Arseniy Polyak</font></a>
+
+        </div>
+    </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
