--- a/src/main/resources/templates/sub.html
+++ b/src/main/resources/templates/sub.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:display="http://www.w3.org/1999/xhtml"
-      xmlns:style="http://www.w3.org/1999/xhtml">
+      xmlns:style="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Adding sub category</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -37,22 +37,19 @@
 <!--    <form th:action="@{/addSub}" th:object="${categories}" method="POST">-->
 
 
-    <ul class="navbar-nav mr-auto">
+    <div  class="col-sm-3">
 
-
-
-        <li  class="col-sm-3">
             <select class="form-control" name="category_name">
                 <option th:each="category :${categories}"
                         th:text="${category.name}">
             </select>
-        </li>
-        <br>
 
-        <li  class="col-sm-3" >
+        <br>
             <input class="form-control" type="text" name="sub_category_name" placeholder="Sub category'name"/>
-        </li>
-    </ul>
+        <br>
+         <input class="btn btn-primary" type="submit" value="Save" />
+
+    </div>
     <br>
 
 
@@ -66,7 +63,6 @@
 <!--    </div>-->
 
 
-    <input class="btn btn-primary" type="submit" value="Save" />
 
     <table style="margin-left: 17px">
 
